--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,63 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .focus-styled {
+    @apply focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50;
+  }
+
+  .focus-always {
+    @apply outline-none ring-2 ring-blue-500 ring-opacity-50;
+  }
+
+  .hover-default {
+    @apply hover:opacity-80 hover:transition-none active:opacity-60 transition-opacity duration-500 cursor-pointer focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50;
+  }
+
+  .paragraph {
+    @apply text-xl;
+    line-height: 1.6;
+  }
+
+  .font-family-sans {
+    font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+      Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+      sans-serif;
+  }
+
+  .input-common {
+    @apply block h-12 bg-gray-200 w-full px-3 border border-solid border-gray-300 bg-gray-200;
+  }
+
+  .button-reset {
+    border: none;
+    background-color: transparent;
+    border-radius: 0;
+    -webkit-appearance: none;
+    text-decoration: none;
+    user-select: none;
+  }
+
+  .expand-area:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    bottom: -10px;
+    left: -10px;
+  }
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body {
+  @apply font-family-sans;
 }
 
 a {
@@ -11,6 +65,26 @@ a {
   text-decoration: none;
 }
 
-* {
+button,
+a {
+  @apply focus:ring-offset-1;
+}
+
+input,
+button,
+a,
+div,
+td {
+  @apply focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50;
+}
+
+*,
+*:before,
+*:after {
   box-sizing: border-box;
+}
+
+input[type='file'],
+input[type='file']::-webkit-file-upload-button {
+  cursor: pointer;
 }
